# CrysFML08

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  Cmake_help.inf  LICENSE  README.md  make_CrysFML_fpm.bat  make_CrysFML_fpm.sh
API/: CMakeLists.txt
API/Src/: API_cfml_atoms.py  API_cfml_bckpeaks.py  API_cfml_bvs_tables.py  API_cfml_diffpatt.py  API_cfml_enbvs.py  API_cfml_eos.py  API_cfml_fft.py  API_cfml_geom.py  API_cfml_gspacegroups.py  API_cfml_ill_instrm_data.py  API_cfml_ioform.py  API_cfml_kvec_polarimetry.py  API_cfml_kvec_structure_factors.py  API_cfml_kvec_symmetry.py  API_cfml_maps.py  API_cfml_metrics.py  API_cfml_molecules.py  API_cfml_optimization.py  API_cfml_optimization_lsq.py  API_cfml_profiles.py  API_cfml_propagation_vectors.py  API_cfml_rational.py  API_cfml_reflections.py  API_cfml_scattering_tables.py  API_cfml_simulated_annealing.py  API_cfml_structure_factors.py  API_cfml_sxtal_geom.py  API_cfml_symmetry_tables.py  CMakeLists.txt  __init__.py
API/Src/Extensions/: api_init.f90  py_cfml_atoms.f90  py_cfml_eos.f90  py_cfml_gspacegroups.f90  py_cfml_magnetic_database.f90  py_cfml_profiles.f90  py_cfml_reflections.f90  py_cfml_superspace_database.f90  py_cfml_sxtal_geom.f90  py_cfml_symmetry_tables.f90  wraps.f90
BuildServer/Docker/: Dockerfile_xenial_gfortran_build_F2008  Dockerfile_xenial_gfortran_setup  Dockerfile_xenial_gfortran_setup_F2008  Dockerfile_xenial_ifort_build_F2008
BuildServer/Unix/: build.sh  build_F2008.sh  build_release.sh
BuildServer/Windows/: build.bat  build_release.bat
Documents/: Extension_Hall_symbols_MSG.docx  Magnetic_Hall_Symbols.txt  Magnetic_Hall_symbols_JAppCryst.docx  Supplementary_Material_Hall_symbols.docx
HDF5/: Nexus_Mod.f90  installation_notes.txt
ODR/: CFML_EisPack.f90  ODR_wrapper.f90  dp_precision.f  lpkbls.f  make_odrpack_deb_sp.bat  make_odrpack_dp.bat  make_odrpack_sp.bat  make_odrpack_sp.sh  odr.f  sp_precision.f
Python_API/: CMakeLists.txt
Python_API/Extensions/: API_init.f90
Python_API/scripts/: apigen.py  build_docs.py  cfml_objects.py  docgen.py  parser_utils.py  reader.py  wrapper_procs.py  wrapper_types.py
Python_API/src/: py_cfml_atoms.f90  py_cfml_bckpeaks.f90  py_cfml_bonds_tables.f90  py_cfml_bvs_tables.f90  py_cfml_diffpatt.f90  py_cfml_enbvs.f90  py_cfml_eos.f90  py_cfml_extincorr.f90  py_cfml_geom.f90  py_cfml_gspacegroups.f90  py_cfml_ill_instrm_data.f90  py_cfml_ioform.f90  py_cfml_kvec_polarimetry.f90  py_cfml_kvec_structure_factors.f90  py_cfml_kvec_symmetry.f90  py_cfml_maps.f90  py_cfml_metrics.f90  py_cfml_molecules.f90  py_cfml_optimization.f90  py_cfml_optimization_lsq.f90  py_cfml_profiles.f90  py_cfml_propagation_vectors.f90  py_cfml_rational.f90  py_cfml_reflections.f90  py_cfml_scattering_tables.f90  py_cfml_simulated_annealing.f90  py_cfml_structure_factors.f90  py_cfml_sxtal_geom.f90  py_cfml_symmetry_tables.f90
Src/: CFML_Atoms.f90  CFML_BVS_Tables.f90  CFML_BckPeaks.f90  CFML_Bonds_Tables.f90  CFML_Diffpatt.f90  CFML_EnBVS.f90  CFML_EoS.f90  CFML_Export_VTK.f90  CFML_ExtinCorr.f90  CFML_FFT.f90  CFML_Geom.f90  CFML_GlobalDeps_Linux_GFOR.f90  CFML_GlobalDeps_Linux_IFOR.f90  CFML_GlobalDeps_MacOS_GFOR.f90  CFML_GlobalDeps_MacOs_IFOR.f90  CFML_GlobalDeps_Windows_GFOR.f90  CFML_GlobalDeps_Windows_IFOR.f90  CFML_HDF5.f90  CFML_ILL_Instrm_Data.f90  CFML_IOForm.f90  CFML_KeyCodes.f90  CFML_Keywords_Code_Parser.f90  CFML_Magnetic_Database.f90  CFML_Maps.f90  CFML_Maths.f90  CFML_Messages.f90  CFML_Messages_Win.f90  CFML_Metrics.f90  CFML_Molecules.f90  CFML_Optimization.f90  CFML_Optimization_LSQ.f90  CFML_Optimization_SAnn.f90  CFML_Profiles.f90  CFML_Propagation_Vectors.f90  CFML_Python.f90  CFML_Random.f90  CFML_Rational.f90  CFML_Reflections.f90  CFML_SXTAL_Geom.f90  CFML_Scattering_Tables.f90  (+26 more)
Src/CFML_Atoms/: Atm_Allocating_Atoms.f90  Atm_ChangeList.f90  Atm_ExtendList.f90  Atm_PointList.f90  Atm_Python_Wraps.f90  Atm_RW_Bin_AtmList.f90  Atm_SymmetryConstraints.f90  Atm_Write_AtmList.f90
Src/CFML_DiffPatt/: DiffP_Add_Patterns.f90  DiffP_BackgPatt.f90  DiffP_FWHM_Peak.f90  DiffP_NoisyPoints.f90  DiffP_ReadPatt_CIF.f90  DiffP_ReadPatt_FREE.f90  DiffP_ReadPatt_GSAS.f90  DiffP_ReadPatt_ILL.f90  DiffP_ReadPatt_ISIS.f90  DiffP_ReadPatt_LLB.f90  DiffP_ReadPatt_NLS.f90  DiffP_ReadPatt_PAN.f90  DiffP_ReadPatt_PSI.f90  DiffP_ReadPatt_Socabim.f90  DiffP_ReadPatt_TimeVar.f90  DiffP_ReadPatt_XYSIG.f90  DiffP_ReadPatterns.f90  DiffP_WritePatterns.f90
Src/CFML_EnBVS/: EnBVS_CostF.f90  EnBVS_Energy.f90  EnBVS_Maps.f90  EnBVS_SetTab.f90
Src/CFML_EoS/: EoS_Calc.f90  EoS_CellPar.f90  EoS_CopyEDat.f90  EoS_Get_APL.f90  EoS_Get_Angle.f90  EoS_Get_HeatCap.f90  EoS_Get_Tensor.f90  EoS_LinEoS_Allowed.f90  EoS_ModDir.f90  EoS_PrincipalEoS.f90  EoS_Transform_ESD.f90  Eos_Allocate.f90  Eos_AlphaCalc.f90  Eos_Checks.f90  Eos_Conlev.f90  Eos_DerivPartial.f90  Eos_FfCalc.f90  Eos_Get_Bulk.f90  Eos_Get_Pressure.f90  Eos_Get_Properties.f90  Eos_Get_Tait.f90  Eos_Get_Temperature.f90  Eos_Get_Transition.f90  Eos_Get_Volume.f90  Eos_Gruneisen.f90  Eos_Init.f90  Eos_K_Cal.f90  Eos_NormPressure.f90  Eos_PVT_Table.f90  Eos_Pthermal.f90  Eos_Read.f90  Eos_Set.f90  Eos_Strain.f90  Eos_Write.f90  Eos_dKdTCalc.f90
Src/CFML_ExtinCorr/: Ext_BeckerCoppens.f90  Ext_FlippingRatios.f90  Ext_ShelxCorr.f90
Testing/Powder/Test_1/src/: CMakeLists.txt  forpy_mod.F90  powder_mod.f90
Testing/Powder/Test_2/fortran/src/: CMakeLists.txt  powder_mod.f90
cmake/: FindWINTERACTER.cmake  LibFindMacros.cmake  add_prefix.cmake  add_suffix.cmake  set_compiler_flags.cmake
docs/: conf.py  index.rst
rsp/: gf_debug_con.rsp  gf_debug_win.rsp  gf_release_con.rsp  gf_release_win.rsp  ifort_lin_debug_con.rsp  ifort_lin_debug_win.rsp  ifort_lin_release_con.rsp  ifort_lin_release_win.rsp  ifort_win_debug_con.rsp  ifort_win_debug_win.rsp  ifort_win_release_con.rsp  ifort_win_release_win.rsp  ifx_lin_debug_con.rsp  ifx_lin_release_con.rsp  ifx_win_debug_con.rsp  ifx_win_release_con.rsp
toml/: fpm_linmac_con.toml  fpm_linmac_win.toml  fpm_windows_con.toml  fpm_windows_con_prog.toml  fpm_windows_win.toml
(+1275 files in other folders)
